[tool.poetry]
name = "python-iitp"
version = "0.1.0"
description = ""
authors = ["Anton Tsirentarov <tsyrentarov.as@phystech.edu>"]
readme = "README.md"
homepage = "https://github.com/6jack6/python_iitp"
repository = "https://github.com/6jack6/python_iitp"
license = "MIT"
keywords = ["python_iitp"]

[tool.poetry.dependencies]
python = ["^3.10"]

matplotlib = "^3.9.0"
numpy = "^1.26.4"
flake8 = "^7.0.0"
sphinx-autodoc-typehints = "^2.1.0"
opencv-python = "^4.9.0.80"
scikit-image = "^0.23.2"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
click = "8.0.2"
mypy = "^1.10.0"
pytype = {version = "^2024.4.11", python = "3.7"}
xdoctest = "^1.1.3"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python-iitp = "python_iitp.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python_iitp"]

[tool.coverage.report]
show_missing = true
#fail_under = 100
